# confoundry

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pdoc.yml  python-app.yml
data/: california.json  drought.graph  drought_filenames.json  drought_name_map.json
data/california_example/: era5_precip_2021_07_california.tif  era5_ssrd_2021_07_california.tif  era5_swvl1_2021_07_california.tif  era5_t2m_2021_07_california.tif  gmia_irrigation_0p1deg_california.tif  ndvi_2021_07_california.tif  spei01_clipped_aoi_2021-07.tif  worldcover_2021_california_0p1deg.tif
data/iberian_drought_experiment/: experiment.yaml  iberian_peninsula.json
docs/: landcover_directlingam_analysis_README.md  landcover_graph_validation_README.md  per_pixel_directlingam_interventions.md
src/confoundry/: analysis_helpers.py  causal_holdout_validation.py  cluster_graphs.py  db_helpers.py  download_to_db.py  export_random_directlingam_window.py  future_ndvi_prediction.py  gather.py  graph_analysis.py  landcover_directlingam_analysis.py  landcover_graph_validation.py  landcover_helpers.py  order_graphs.py  per_pixel_analysis.py  per_pixel_directlingam_analysis.py  per_pixel_directlingam_interventions.py  per_pixel_directlingam_process_attribution.py  per_pixel_directlingam_two_source_map.py  per_pixel_graph_diagnostics.py  per_pixel_graph_discovery.py  per_pixel_visualize.py  residualize_timeseries.py  visualize_bootstrapped_graph.py  visualize_directlingam_diagnostics.py
src/confoundry/downloaders/: downloader.py  ecira.py  era5.py  esacci_landcover.py  modis_ndvi.py  spei.py
src/drought_causality/: analysis.py  create_db.py  create_timeseries_dataset.py  database_stats.py  download_to_db.py  downloaders.py  duckdb_helpers.py  gather.py  graph_discovery.py  main.py  per_pixel_graph_discovery.py  per_pixel_visualize.py  utils.py  visualize_bootstrapped_graph.py
src/drought_causality/downloaders/: downloader.py  ecira.py  era5.py  esa_worldcover.py  esacci_landcover.py  gmia.py  modis_ndvi.py  sen2_aws.py  spei.py
test/: test_analysis.py  test_db_helpers.py  test_download.py  test_downloaders.py  test_duckdb_helpers.py  test_gather.py  test_main.py  test_per_pixel_graph_discovery.py  test_timeseries_download.py
