[project]
name = "drought-causality"
version = "0.0.1"
authors = [
  { name="Vytautas Jancauskas", email="vytautas.jancauskas@dlr.de" },
]
description = "Causal explorer for droughts."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/drought-causality"
Issues = "https://github.com/DLR-MF-DAS/drought-causality/issues"
