[project]
name = "drought-causality"
version = "0.2.0"
authors = [
  { name="Vytautas Jancauskas", email="vytautas.jancauskas@dlr.de" },
  { name="Samuel Garske", email="samuel.garske@dlr.de" },
]
description = "Causal explorer for droughts."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
    "requests",
    "geopandas",
    "xarray",
    "rioxarray",
    "h5netcdf",
    "h5py",
    "netcdf4",
    "cdsapi",
    "dowhy",
    "pydot",
    "pygraphviz",
    "cdsapi",
    "networkx",
    "duckdb",
    "networkx",
    "numba",
    "causal-learn",
    "lingam",
    "plotly",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/drought-causality"
Issues = "https://github.com/DLR-MF-DAS/drought-causality/issues"
